fix to overflowing card names

--- a/magic/src/app/decklist-item/decklist-item.component.css
+++ b/magic/src/app/decklist-item/decklist-item.component.css
@@ -7,6 +7,23 @@
   font-weight: bold;
   text-shadow: 2px 2px 5px black;
 
+	padding: 0 10px;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 30px;
+	background-position:32px -90px;
+	border-bottom: 3px solid black;
+	background-size: 100%;
+	overflow: hidden;
+   white-space: nowrap;
+   text-overflow: clip;
+}
+
+:host:first-of-type .card {
+   border-top: 3px solid black;
 }
 
 .card-bg {
@@ -20,19 +37,6 @@
    top: 0;
 }
 
-.card {
-	padding: 0 10px;
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	height: 30px;
-	background-position:32px -90px;
-	border-bottom: 3px solid black;
-	background-size: 100%;
-	overflow: hidden;
-}
 .card-darken, .card-flex{
 	z-index: 2;
 }
