--- a/magic/src/app/decklist/decklist.component.css
+++ b/magic/src/app/decklist/decklist.component.css
@@ -1,5 +1,4 @@
 .decklist {
-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	width:290px;
 /*
 	border-top: 10px solid transparent;
@@ -7,11 +6,6 @@ font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	border-radius:5px;
 */
   border-color: black;
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
-  text-shadow: 2px 2px 5px black;
-  background:white;
   margin:0 auto 15px;
   background-color: black;
 
